<resources>
    <string name="app_name">World Wonders</string>
    <string name="username_hint">Nome de usuário</string>
    <string name="password_hint">Senha</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Configurações</string>
    <string name="name_hint">Nome</string>
    <string name="login_button">Entrar</string>
    <string name="title_activity_signup">Registrar</string>
    <string name="sing_up_button">Registrar</string>
    <string name="title_activity_world_wonders">WorldWondersActivity</string>
    <string name="title_activity_detail">Wonder</string>
    <string name="bookmark">Bookmark</string>
    <string name="share">Share</string>
    <string name="directions">Directions</string>
    <string name="description_source">Fonte: Wikipedia</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="CLOSE">Fechar</string>
</resources>
