<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/textUsername"
            android:hint="@string/username_hint"
            android:layout_marginBottom="15dp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/textPassword"
            android:hint="@string/password_hint"
            android:password="true"
            android:paddingBottom="15dp"/>/>
    </android.support.design.widget.TextInputLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:id="@+id/login_button" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sing_up_button"
        android:id="@+id/sing_up_button" />

</LinearLayout>